✨| Added database connection

--- a/bot/package.json
+++ b/bot/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.7.0",
     "path": "^0.12.7"
   }
 }
